# supafone-labs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: hosted-agents-api.md  index.md  providers.md  quickstart.md
examples/: README.md  cloud_typescript.ts  create-basic-agent.ts  create-legal-intake-agent.ts  create-medical-receptionist.ts  create-sales-agent-with-supafone-pro.ts  create_supafone_agent.ts  custom_model_and_prompts.py  deepgram_voice_agent.py  elevenlabs_agent.py  full_stack_twilio_ultravox.py  gpt_realtime.py  hosted-agent-builder.html  install-widget.ts  list-voices.ts  livekit_agent.py  pipecat_pipeline.py  retell_custom_llm.py  smoke-hosted-agent.ts  telephony_signalwire_tap.py  telephony_telnyx_tap.py  twilio_sip_multilingual_tap.py  ultravox_end_to_end.py  vapi_webhook_server.py
gitbook/: README.md  SUMMARY.md  admin-credit-provisioning.md  admin-developer-portal.md  agent-factory.md  api-keys-and-auth.md  byok-providers.md  call-recording-artifacts.md  call-stages.md  deployment-render.md  developer-workflows.md  e2e-testing.md  framework-support.md  frontend-routing.md  hosted-agent-builder.md  hosted-agents-api.md  llms-ai-agent-prompt.md  log-streaming.md  mcp-server.md  overview.md  phone-numbers.md  pricing-and-credits.md  provider-agnostic-framework.md  quickstart.md  research-paper.md  sdk-installation.md  sdk-parity.md  self-healing-watcher.md  troubleshooting.md  voice-ai-thesis.md  voice-qa-landscape.md  voices-and-previews.md  why-supafone.md
mcp/: README.md  supafone_mcp.py
sdk-ts/: LICENSE  README.md  package-lock.json  (+3 more)
(+107 files in other folders)
